--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,26 @@
                 !signUpForm.get('userData.username').valid &&
                 signUpForm.get('userData.username').touched
               "
-              >Please enter a valid username!</span
             >
+              <span
+                *ngIf="
+                  signUpForm.get('userData.username').errors['nameIsForbidden']
+                "
+                >This name is forbidden</span
+              >
+              <span
+                *ngIf="signUpForm.get('userData.username').errors['required']"
+                >Username is required</span
+              >
+              <span
+                *ngIf="
+                  !signUpForm.get('userData.username').errors.required &&
+                  signUpForm.get('userData.username').errors.minlength
+                    .actualLength < 3
+                "
+                >Username need to be at least 3 characters</span
+              >
+            </span>
           </div>
           <div class="form-group">
             <label for="email">email</label>
@@ -46,6 +64,22 @@
             }}
           </label>
         </div>
+
+        <div formArrayName="hobbies">
+          <h4>Your Hobbies</h4>
+          <button class="btn btn-default" (click)="onAddHobby()" type="button">
+            Add Hobbies
+          </button>
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              [formControlName]="i"
+              *ngFor="let hobbyControl of getControls(); let i = index"
+            />
+          </div>
+        </div>
+
         <h3 class="help-block" *ngIf="!signUpForm.valid && signUpForm.touched">
           Please enter a valid data
         </h3>
